<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="@dimen/card_layout_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:paddingBottom="22dp"
        android:elevation="8dp">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:padding="6dip"
            android:layout_marginBottom="22dp"
            android:id="@+id/my_profile"
            android:layout_marginTop="8dp"
            android:clickable="true">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userPic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_users"
                android:layout_marginLeft="12dp"
                app:civ_border_color="@color/colorAccent"
                app:civ_border_width="1dp"
                />
            <TextView
                android:id="@+id/header1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="25sp"
                android:textColor="@color/colorPrimary"
                android:gravity="center_vertical"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginStart="72dp"
                android:layout_marginLeft="72dp" />
            <TextView
                android:id="@+id/offerText"
                android:layout_width="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header1"
                android:text="@string/manage_profile"
                android:layout_marginStart="72dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:layout_marginLeft="72dp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingBottom="22dp"
        app:cardBackgroundColor="@color/white"
        android:elevation="8dp">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:padding="6dip"
            android:id="@+id/my_events"
            android:layout_marginBottom="22dp"
            android:layout_marginTop="8dp"
            android:clickable="true">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userPic2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="12dp"
                android:layout_gravity="center"
                android:src="@drawable/calender"
                app:civ_border_color="@color/colorAccent"
                app:civ_border_width="1dp"
                />
            <TextView
                android:id="@+id/header2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/events"
                android:textSize="25sp"
                android:textColor="@color/colorPrimary"
                android:gravity="center_vertical"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginStart="72dp"
                android:layout_marginLeft="72dp" />
            <TextView
                android:id="@+id/offerText2"
                android:layout_width="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header2"
                android:text="@string/manage_events"
                android:layout_marginStart="72dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:layout_marginLeft="72dp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>