<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hariofspades.educorp.activities.ProfileParentActivity"
    tools:showIn="@layout/activity_profile_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="12dp"
            android:paddingBottom="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Location"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:drawableLeft="@drawable/ic_place_black_24dp"
                    android:drawableStart="@drawable/ic_place_black_24dp"
                    android:drawablePadding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:padding="8dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_address"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_address"
                        android:textColor="@drawable/edit_text_style"
                        android:inputType="textMultiLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_address" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_pincode"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="35dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_pincode"
                        android:inputType="number"
                        android:textColor="@drawable/edit_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_pincode" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:paddingBottom="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Student"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:drawablePadding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:padding="8dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_studentName"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_student_name"
                        android:inputType="textMultiLine"
                        android:layout_width="match_parent"
                        android:textColor="@drawable/edit_text_style"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_studentname" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_school"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_school"
                        android:inputType="number"
                        android:textColor="@drawable/edit_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_school" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_grade"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="35dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_grade"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:textColor="@drawable/edit_text_style"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_grade" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:paddingBottom="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Subjects"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:drawableLeft="@drawable/ic_assignment_black_24dp"
                    android:drawableStart="@drawable/ic_assignment_black_24dp"
                    android:drawablePadding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:padding="8dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add New Subject"
                    android:id="@+id/addNewSubject"
                    android:background="@color/colorAccent"
                    android:textColor="@color/primary_text"
                    />
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/subjectRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
